crates/pixi-build-mojo/src/snapshots/pixi_build_rust__build_script__test__sccache@bash.snap
---
source: crates/pixi-build-rust/src/build_script.rs
expression: "script.join(\"\\n\")"
---
export RUSTC_WRAPPER=sccache

cargo install --locked --root "$PREFIX" --path my-prefix-dir --no-track  --force

sccache --show-stats
