crates/pixi-build-mojo/src/snapshots/pixi_build_rust__build_script__test__sccache@cmdexe.snap
---
source: crates/pixi-build-rust/src/build_script.rs
expression: "script.join(\"\\n\")"
---
SET RUSTC_WRAPPER=sccache

cargo install --locked --root "%PREFIX%" --path my-prefix-dir --no-track  --force
if errorlevel 1 exit 1

sccache --show-stats
